made the site responsive for screen below 350px

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="images/logo.png" alt="logo">
         </div>
         <div class="info">
-            <h1 class="my_name">amit kumar prajapati</h1>
+            <h1 class="my_name">amit kr. prajapati</h1>
             <h2 class="my_info">font-end ninja</h2>
         </div>
         </div>
