wrapped the social icons of the footer in a div with a class social_icon_container and adjusted the margin of the h1 of the footer

--- a/index.html
+++ b/index.html
@@ -64,23 +64,25 @@
 
     <footer>
         <h1>Connect with me :</h1>
-        <div class="social_icon">
-            <a href="https://www.facebook.com"
-            target="_blank">
-                <img class="facebook_icon icon" src="images/facebook.svg" alt="facebook icon">
-            </a>
-        </div>
+        <div class="social_icon_container">
+            <div class="social_icon">
+                <a href="https://www.facebook.com"
+                target="_blank">
+                    <img class="facebook_icon icon" src="images/facebook.svg" alt="facebook icon">
+                </a>
+            </div>
 
-        <div class="social_icon">
-            <a href="https://www.twitter.com" target="_blank">
-                <img class="twitter_icon icon" src="images/twitter.svg" alt="twitter icon">
-            </a>
-        </div>
+            <div class="social_icon">
+                <a href="https://www.twitter.com" target="_blank">
+                    <img class="twitter_icon icon" src="images/twitter.svg" alt="twitter icon">
+                </a>
+            </div>
 
-        <div class="social_icon">
-            <a href="https://www.linkedin.com" target="_blank">
-                <img class="linkedin_icon icon" src="images/linkedin.svg" alt="linkedin icon">
-            </a>
+            <div class="social_icon">
+                <a href="https://www.linkedin.com" target="_blank">
+                    <img class="linkedin_icon icon" src="images/linkedin.svg" alt="linkedin icon">
+                </a>
+            </div>
         </div>
     </footer>
 
