--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <article class="article_1 article">
                     <h1>Animal trading card</h1>
                     <img src="images/animal trading card.jpg" alt="Cheetah">
+                    <p class="article1_info article_info">
+                        <strong>Animal trading card</strong> is just a card based layout containing the details of a animal. It is created using just <em>HTML</em> and <em>CSS</em>.
+                    </p>
                     <a href="https://codepen.io/amit208/full/vdRVdL/" target="_blank">
                         <button class="artilce1_btn btn">check</button>
                     </a>
@@ -45,14 +48,20 @@
                 <article class="article_2 article">
                     <h1>Mockup Article</h1>
                     <img src="images/mockup article.jpg" alt="Mockup Article">
+                    <p class="article2_info article_info">
+                        <strong>Mockup Article</strong> is simply just a basic mockup of an article. It is created using just semantic <em>HTML</em> tags and <em>CSS</em>.
+                    </p>
                     <a href="https://codepen.io/amit208/full/PeeoRp/" target="_blank">
-                        <button class="artilce1_btn btn">check</button>
+                    <button class="artilce1_btn btn">check</button>
                     </a>
                 </article>
 
                 <article class="article_3 article">
                     <h1>Pixel Art Maker</h1>
                     <img src="images/pixel art maker.jpg" alt="Pixel art marker">
+                    <p class="article3_info article_info">
+                        <strong>Pixel Art Maker</strong> is a basic web app used to make pixel art using mouse clicks. It is created using <em>HTML</em>, <em>CSS</em> and <em>JavaScript</em>.
+                    </p>
                     <a href="https://codepen.io/amit208/full/VxdYZe/" target="_blank">
                         <button class="artilce1_btn btn">check</button>
                     </a>
