Just changed the name of the image files according to the html validator because space is not allow in file name according to the html validator

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head lang="en">
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>amit208 - Portfolio Site</title>
@@ -36,7 +36,7 @@
             <div class="section_articles">
                 <article class="article_1 article">
                     <h1>Animal trading card</h1>
-                    <img src="images/animal trading card.jpg" alt="Cheetah">
+                    <img src="images/animal_trading_card.jpg" alt="Cheetah">
                     <p class="article1_info article_info">
                         <strong>Animal trading card</strong> is just a card based layout containing the details of a animal. It is created using just <em>HTML</em> and <em>CSS</em>.
                     </p>
@@ -47,7 +47,7 @@
 
                 <article class="article_2 article">
                     <h1>Mockup Article</h1>
-                    <img src="images/mockup article.jpg" alt="Mockup Article">
+                    <img src="images/mockup_article.jpg" alt="Mockup Article">
                     <p class="article2_info article_info">
                         <strong>Mockup Article</strong> is simply just a basic mockup of an article. It is created using just semantic <em>HTML</em> tags and <em>CSS</em>.
                     </p>
@@ -58,7 +58,7 @@
 
                 <article class="article_3 article">
                     <h1>Pixel Art Maker</h1>
-                    <img src="images/pixel art maker.jpg" alt="Pixel art marker">
+                    <img src="images/pixel_art_maker.jpg" alt="Pixel art marker">
                     <p class="article3_info article_info">
                         <strong>Pixel Art Maker</strong> is a basic web app used to make pixel art using mouse clicks. It is created using <em>HTML</em>, <em>CSS</em> and <em>JavaScript</em>.
                     </p>
