Removed the buttom element from the html file and placed the button's class to it's parent anchor element to keep the same styling as previous also changed the color of the texts and anchors to keep consistant color pattern(brown)

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                     <p class="article1_info article_info">
                         <strong>Animal trading card</strong> is just a card based layout containing the details of a animal. It is created using just <em>HTML</em> and <em>CSS</em>.
                     </p>
-                    <a href="https://codepen.io/amit208/full/vdRVdL/" target="_blank">
-                        <button class="artilce1_btn btn">check</button>
-                    </a>
+                    <a href="https://codepen.io/amit208/full/vdRVdL/" target="_blank" class="artilce1_btn btn">check</a>
                 </article>
 
                 <article class="article_2 article">
@@ -51,9 +49,7 @@
                     <p class="article2_info article_info">
                         <strong>Mockup Article</strong> is simply just a basic mockup of an article. It is created using just semantic <em>HTML</em> tags and <em>CSS</em>.
                     </p>
-                    <a href="https://codepen.io/amit208/full/PeeoRp/" target="_blank">
-                    <button class="artilce1_btn btn">check</button>
-                    </a>
+                    <a href="https://codepen.io/amit208/full/PeeoRp/" target="_blank" class="artilce2_btn btn">check</a>
                 </article>
 
                 <article class="article_3 article">
@@ -62,9 +58,7 @@
                     <p class="article3_info article_info">
                         <strong>Pixel Art Maker</strong> is a basic web app used to make pixel art using mouse clicks. It is created using <em>HTML</em>, <em>CSS</em> and <em>JavaScript</em>.
                     </p>
-                    <a href="https://codepen.io/amit208/full/VxdYZe/" target="_blank">
-                        <button class="artilce1_btn btn">check</button>
-                    </a>
+                    <a href="https://codepen.io/amit208/full/VxdYZe/" target="_blank" class="artilce3_btn btn">check</a>
                 </article>
             </div>
         </section>
